# TrueEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md  doxyfile  exec.sh  test
.github/workflows/: merge_submodule.yaml  project_safety.yaml  unit_tests.yaml  windows_build.yaml
config/: protocol.json  protocol.md
include/: AScene.hpp  ConfigReader.hpp  EventManager.hpp  Exception.hpp  GameTool.hpp  Physics.hpp  Scene.hpp  SignalManager.hpp  clock.hpp  event.hpp  eventManager.hpp  events.hpp  hitbox_management.hpp  map_loader.hpp  temp.hpp
include/components/: clock.hpp  damage.hpp  drawable.hpp  event.hpp  health.hpp  hitbox.hpp  interactive.hpp  map_loader.hpp  movable.hpp  player.hpp  position.hpp  sprite.hpp  velocity.hpp  window.hpp
include/config/: ConfigParser.hpp  map_loader.hpp
include/event/: EventManager.hpp  events.hpp
include/maths/: Rect.hpp  Vector.hpp  numeric.hpp
include/network/: AutoClient.hpp  AutoServer.hpp  Game.hpp  GameClient.hpp  GameServer.hpp  generated_messages.hpp
include/network1/: AutoClient.hpp
include/plugin/: APlugin.hpp  DL_management.hpp  DlManager.hpp  PluginManager.hpp  plugin_api.hpp
include/systems/: deal_damage.hpp  display.hpp  draw.hpp  event.hpp  hitbox.hpp  interaction.hpp  map.hpp  movement.hpp  view_player.hpp
plugins/: CMakeLists.txt
plugins/display/: CMakeLists.txt
plugins/display/include/: Display.hpp
plugins/display/include/display/: factory.hpp
plugins/display/include/display/components/: animation.hpp  paralax.hpp  parallax.hpp  sprite.hpp
plugins/display/include/display/systems/: animate.hpp  event.hpp  map_loader.hpp
plugins/display/src/: factory.cpp
plugins/display/src/components/: animation.cpp  paralax.cpp  parallax.cpp  sprite.cpp  window.cpp
plugins/display/src/systems/: animate.cpp  display.cpp  draw.cpp  event.cpp  view_player.cpp
plugins/entity_specs/: CMakeLists.txt
plugins/entity_specs/include/: EntitySpec.hpp
plugins/entity_specs/include/entity_spec/: factory.hpp  hitbox.hpp
plugins/entity_specs/include/entity_spec/components/: damage.hpp  fragile.hpp  health.hpp  pattern.hpp  team.hpp  timeout.hpp
plugins/entity_specs/include/entity_spec/systems/: apply_fragile.hpp  apply_pattern.hpp  deal_damage.hpp  kill_entity.hpp
plugins/entity_specs/src/: factory.cpp  hitbox.cpp
plugins/entity_specs/src/components/: damage.cpp  fragile.cpp  health.cpp  pattern.cpp  team.cpp  timeout.cpp
plugins/entity_specs/src/systems/: apply_fragile.cpp  apply_pattern.cpp  deal_damage.cpp  kill_entity.cpp
plugins/interaction/: CMakeLists.txt
plugins/interaction/include/: Interaction.hpp
plugins/interaction/include/interaction/: factory.hpp
plugins/interaction/include/interaction/components/: clickable.hpp  hoverable.hpp  interactive.hpp  player.hpp
plugins/interaction/src/: factory.cpp
plugins/interaction/src/components/: interactive.cpp
plugins/interaction/src/systems/: interaction.cpp
plugins/movement/: CMakeLists.txt
plugins/movement/include/: Movement.hpp
plugins/movement/include/movement/: factory.hpp
plugins/movement/include/movement/components/: position.hpp
plugins/movement/include/movement/systems/: movement.hpp
plugins/movement/src/: factory.cpp
plugins/movement/src/components/: position.cpp  velocity.cpp
plugins/movement/src/systems/: movement.cpp
plugins/physic/: CMakeLists.txt
plugins/physic/include/: Physic.hpp  Physics.hpp
plugins/physic/include/physic/: factory.hpp  hitbox_management.hpp
plugins/physic/include/physic/components/: hitbox.hpp  movable.hpp  position.hpp  velocity.hpp
plugins/physic/include/physic/systems/: hitbox.hpp  movement.hpp
plugins/physic/src/: factory.cpp  hitbox_management.cpp
plugins/physic/src/components/: hitbox.cpp  position.cpp  velocity.cpp
plugins/physic/src/systems/: hitbox.cpp  movement.cpp
plugins/sfml/: CMakeLists.txt
plugins/sfml/include/: Sfml.hpp
plugins/sfml/include/sfml/: events.hpp  factory.hpp
plugins/sfml/include/sfml/components/: clickable.hpp  drawable.hpp  focus.hpp  hoverable.hpp  sound.hpp  sprite.hpp  text.hpp  window.hpp
plugins/sfml/include/sfml/events/: endpoint.hpp
plugins/sfml/include/sfml/systems/: display.hpp  draw.hpp  event.hpp  map_loader.hpp  paralax.hpp  parallax.hpp  playsound.hpp  view_player.hpp
plugins/sfml/src/: factory.cpp
plugins/sfml/src/components/: sound.cpp  sprite.cpp  text.cpp  window.cpp
plugins/sfml/src/events/: keyboard.cpp  mouse.cpp  pollEvent.cpp
plugins/sfml/src/systems/: click.cpp  display.cpp  draw.cpp  event.cpp  paralax.cpp  parallax.cpp  playsound.cpp  view_player.cpp
plugins/window/: CMakeLists.txt
plugins/window/include/: Window.hpp
plugins/window/include/window/: factory.hpp
plugins/window/include/window/components/: sprite.hpp
plugins/window/src/: factory.cpp
plugins/window/src/systems/: display.cpp  draw.cpp  view_player.cpp
src/: ConfigReader.cpp  GameTool.cpp  clock.cpp  event.cpp  hitbox_management.cpp  temp.cpp  window.cpp
src/components/: clock.cpp  damage.cpp  health.cpp  hitbox.cpp  interactive.cpp  map_loader.cpp  position.cpp  velocity.cpp  window.cpp
src/config/: map_loader.cpp  (+1 more)
tests/game_test/: CMakeLists.txt  GameTest
tests/game_test/assets/configs/: audio.toml  base.toml  buttonquit.toml  buttonstart.toml  enemy.toml  enemy_2.toml  menu.toml  player.toml
tests/game_test/assets/maps/: menu1.ddmap  test1.ddmap  test2.ddmap
tests/game_test/include/: game.hpp  map_management.hpp  project_tools.hpp
tests/game_test/include/scenes/: AScene.hpp  IScene.hpp  InGame.hpp  Menu.hpp
tests/game_test/include/scenes/in_game/: InGame.hpp  in_game.cpmt.hpp  in_game.sys.hpp
tests/game_test/include/scenes/menu/: menu.cpmt.hpp  menu.sys.hpp
tests/game_test/src/: main.cpp  map_management.cpp
tests/game_test/src/scenes/: InGame.cpp  Menu.cpp
tests/unit_tests/: CMakeLists.txt  DlManager.cpp  MapLoader.cpp  PluginManager.cpp  temp.cpp
tests/unit_tests/assets/: map.tem  no_entities.tem  no_sep.tem
tests/unit_tests/configs/: good.map  no_entities.map  no_spliter.map  wrong_toml.map
(+23 files in other folders)
